<resources>
    <string name="app_name">LuckyDog</string>
    <string name="log_out">Log out</string>
    <string name="file_provider_authority">my.luckydog.fileprovider</string>
    <string name="dir_image_picker">.image_picker</string>

    <!-- REMOTE CONFIG -->
    <string name="translate_key">translate_key</string>
    
    <!-- NAVIGATION VIEW -->
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_home">Home</string>
    
    <!-- SETTINGS -->
    <string name="dark_theme">Dark theme</string>

    <!-- BOTTOM NAVIGATION MENU -->
    <string name="title_learn">Learn</string>
    <string name="title_vocabulary">Vocabulary</string>
    <string name="title_home">Home</string>
    <string name="title_notes">Notes</string>

    <!-- AUTH -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>

    <string name="already_sign_in">Already an account? Sign In</string>
    <string name="do_not_have_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="terms_of_use">Terms of use</string>

    <!-- DIALOGS -->
    <string name="smth_went_wrong">Oops! Something went wrong&#8230; Please try again later</string>
    <string name="ok">OK</string>
    <string name="loading">Loading&#8230;</string>
    <string name="permission_explain">Explanation permission.. bla-bla-bla-bla-bla</string>

</resources>
